Added mean shift and and affinity propagation (not debugged), plus new plotting protocol

--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -13,7 +13,7 @@ sw=False
 p_rewire=0
 batch_size=32
 train_epochs=1000
-show_every=100
+show_every=-1
 update_rate=18
 rf_type=arange
 depth=3
@@ -774,9 +774,9 @@ train_epochs=1000
 time_weight=2
 
 [E19]
-data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
 segments=3
-exp_name=E19a
+exp_name=E19
 model_name=base_noKura_conv
 img_side = 36
 time_steps=1
@@ -801,9 +801,9 @@ time_weight=0
 verbosity=1
 
 [E20]
-data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
 segments=3
-exp_name=E20a
+exp_name=E20
 model_name=base_noKura_conv
 img_side = 36
 time_steps=1
@@ -828,9 +828,9 @@ time_weight=0
 verbosity=1
 
 [E21]
-data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
 segments=3
-exp_name=E21a
+exp_name=E21
 model_name=base_noKura_conv
 img_side = 36
 time_steps=1
@@ -855,9 +855,9 @@ time_weight=0
 verbosity=1
 
 [E22]
-data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
 segments=3
-exp_name=E22a
+exp_name=E22
 model_name=base_noKura_conv
 img_side = 36
 time_steps=1
@@ -1192,13 +1192,125 @@ verbosity=1
 [E34]
 data_name=New_Multi_MNIST/class_grouping/overlap_0.25
 segments=3
-exp_name=E34
+exp_name=E34b
 model_name=base_conv
 img_side = 36
 time_steps=15
 record_steps=15
 anneal=1.0
 update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=64
+split=4
+kernel_size=5
+activation=tanh
+dropout_p=.5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
+
+[E35]
+data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E35
+model_name=base_conv
+img_side = 36
+time_steps=15
+record_steps=15
+anneal=0.0
+update_rate=14
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=64
+split=4
+kernel_size=5
+activation=tanh
+dropout_p=.5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
+
+[E36]
+data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E36
+model_name=base_conv
+img_side = 36
+time_steps=15
+record_steps=15
+anneal=0.0
+update_rate=10
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=64
+split=4
+kernel_size=5
+activation=tanh
+dropout_p=.5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
+
+[E37]
+data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E37
+model_name=base_conv
+img_side = 36
+time_steps=15
+record_steps=15
+anneal=0.0
+update_rate=6
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=64
+split=4
+kernel_size=5
+activation=tanh
+dropout_p=.5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
+
+[E38]
+data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E38
+model_name=base_conv
+img_side = 36
+time_steps=15
+record_steps=15
+anneal=0.0
+update_rate=2
 sparsity_weight=0.0001
 intrinsic_frequencies=zero
 sw=False
