--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -1,19 +1,19 @@
 [DEFAULT]
 data_name=1000-types-mnist/multi-mnist10-0.1-sd0.8
-exp_name=2_digit_mnist_ODE_debug3
+exp_name=2_digit_mnist_ODE_100_dist
 device=cuda
 interactive=False
 model=ODE_conv
 segments=3
 img_side=36
 num_global_control=0
-num_cn=8
+num_cn=24
 sw=False
 p_rewire=0
 batch_size=10
-eval_interval=20
-train_epochs=200
-show_every=300
+eval_interval=5
+train_epochs=300
+show_every=100
 update_rate=10
 rf_type=arange
 depth=3
@@ -28,13 +28,16 @@ phase_initialization=fixed
 walk_step=.1
 intrinsic_frequencies=zero
 learning_rate=1e-4
-transform=exp
+transform=linear
 sparsity_weight=0
-time_weight=2
+time_weight=0
 classify=False
 recurrent_classifier=False
 graph_stats=False
 ode_train=True
+world_size=1
+
+
 
 [Multi_MNIST36]
 exp_name = trial
@@ -275,3 +278,80 @@ sub_experiment = Texture64
 search_parameter = segments
 search_values = [2,3,4,5,6,7,8,9]
 device_indices = [0,1,2,3,4,5,6,7]
+
+[ODE_100_1]
+data_name=1000-types-mnist/multi-mnist10-0.1-sd0.8
+exp_name=2_digit_mnist_ODE_100
+device=cuda
+interactive=False
+model=ODE_conv
+segments=3
+img_side=36
+num_global_control=0
+num_cn=24
+sw=False
+p_rewire=0
+batch_size=80
+eval_interval=5
+train_epochs=300
+show_every=200
+update_rate=10
+rf_type=arange
+depth=3
+start_filts=64
+split=16
+out_channels=64
+kernel_size=3,3
+time_steps=1
+record_step=5
+max_time=100
+transform=linear
+phase_initialization=fixed
+intrinsic_frequencies=zero
+learning_rate=1e-4
+sparsity_weight=0
+time_weight=0
+classify=False
+recurrent_classifier=False
+graph_stats=False
+ode_train=True
+world_size=8
+
+
+[ODE_100_2]
+data_name=1000-types-mnist/multi-mnist10-0.1-sd0.8
+exp_name=2_digit_mnist_ODE_100
+device=cuda
+interactive=False
+model=ODE_conv
+segments=3
+img_side=36
+num_global_control=0
+num_cn=24
+sw=False
+p_rewire=0
+batch_size=80
+eval_interval=5
+train_epochs=300
+show_every=200
+update_rate=10
+rf_type=arange
+depth=3
+start_filts=64
+split=16
+out_channels=64
+kernel_size=3,3
+time_steps=1
+record_step=5
+max_time=100
+transform=linear
+phase_initialization=fixed
+intrinsic_frequencies=zero
+learning_rate=1e-4
+sparsity_weight=0
+time_weight=0
+classify=False
+recurrent_classifier=False
+graph_stats=False
+ode_train=True
+world_size=8
