bug_fix_distributed

--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -280,8 +280,8 @@ search_values = [2,3,4,5,6,7,8,9]
 device_indices = [0,1,2,3,4,5,6,7]
 
 [ODE_100_1]
-data_name=1000-types-mnist/multi-mnist10-0.1-sd0.8
-exp_name=2_digit_mnist_ODE_100
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+exp_name=2_digit_mnist_ODE_100_debug
 device=cuda
 interactive=False
 model=ODE_conv
@@ -291,10 +291,10 @@ num_global_control=0
 num_cn=24
 sw=False
 p_rewire=0
-batch_size=80
-eval_interval=5
+batch_size=30
+eval_interval=1
 train_epochs=300
-show_every=200
+show_every=100
 update_rate=10
 rf_type=arange
 depth=3
@@ -315,12 +315,12 @@ classify=False
 recurrent_classifier=False
 graph_stats=False
 ode_train=True
-world_size=8
+world_size=3
 
 
 [ODE_100_2]
 data_name=1000-types-mnist/multi-mnist10-0.1-sd0.8
-exp_name=2_digit_mnist_ODE_100
+exp_name=2_digit_mnist_ODE_100_debug_2
 device=cuda
 interactive=False
 model=ODE_conv
@@ -330,10 +330,10 @@ num_global_control=0
 num_cn=24
 sw=False
 p_rewire=0
-batch_size=80
-eval_interval=5
+batch_size=30
+eval_interval=1
 train_epochs=300
-show_every=200
+show_every=100
 update_rate=10
 rf_type=arange
 depth=3
@@ -354,4 +354,4 @@ classify=False
 recurrent_classifier=False
 graph_stats=False
 ode_train=True
-world_size=8
+world_size=3
