--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 data_name=1000-types-mnist/multi-mnist10-0.1-sd0.8
-exp_name=2_digit_mnist_ODE_100_dist
+exp_name=debug_defaukt
 device=cuda
 interactive=False
 model=ODE_conv
@@ -12,7 +12,7 @@ sw=False
 p_rewire=0
 batch_size=10
 eval_interval=5
-train_epochs=300
+train_epochs=100
 show_every=100
 update_rate=10
 rf_type=arange
@@ -36,7 +36,6 @@ recurrent_classifier=False
 graph_stats=False
 ode_train=True
 world_size=1
-
 
 
 [Multi_MNIST36]
@@ -281,7 +280,7 @@ device_indices = [0,1,2,3,4,5,6,7]
 
 [ODE_100_1]
 data_name=New_Multi_MNIST/class_grouping/overlap_0.25
-exp_name=2_digit_mnist_ODE_100_debug
+exp_name=2_digit_mnist_ODE_100
 device=cuda
 interactive=False
 model=ODE_conv
@@ -291,9 +290,9 @@ num_global_control=0
 num_cn=24
 sw=False
 p_rewire=0
-batch_size=30
+batch_size=80
 eval_interval=1
-train_epochs=300
+train_epochs=30
 show_every=100
 update_rate=10
 rf_type=arange
@@ -315,12 +314,169 @@ classify=False
 recurrent_classifier=False
 graph_stats=False
 ode_train=True
-world_size=3
+world_size=8
 
 
-[ODE_100_2]
+[ODE_100_RK]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+exp_name=2_digit_mnist_ODE_100_rk
+device=cuda
+interactive=False
+model=ODE_conv
+segments=3
+img_side=36
+num_global_control=0
+num_cn=24
+sw=False
+p_rewire=0
+batch_size=80
+eval_interval=1
+train_epochs=30
+show_every=100
+update_rate=10
+rf_type=arange
+depth=3
+start_filts=64
+split=16
+out_channels=64
+kernel_size=3,3
+time_steps=1
+record_step=5
+max_time=100
+transform=linear
+phase_initialization=fixed
+intrinsic_frequencies=zero
+learning_rate=1e-4
+sparsity_weight=0
+time_weight=0
+classify=False
+recurrent_classifier=False
+graph_stats=False
+ode_train=True
+world_size=8
+solver=dopri5
+
+[ODE_100_1_conv]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+exp_name=2_digit_mnist_ODE_100_1_conv
+device=cuda
+interactive=False
+model=ODE_conv
+segments=3
+img_side=36
+num_global_control=0
+num_cn=24
+sw=False
+p_rewire=0
+batch_size=80
+eval_interval=1
+train_epochs=30
+show_every=100
+update_rate=10
+rf_type=arange
+depth=1
+start_filts=128
+split=32
+out_channels=128
+kernel_size=3,3
+time_steps=1
+record_step=5
+max_time=100
+transform=linear
+phase_initialization=fixed
+intrinsic_frequencies=zero
+learning_rate=1e-4
+sparsity_weight=0
+time_weight=0
+classify=False
+recurrent_classifier=False
+graph_stats=False
+ode_train=True
+world_size=8
+solver=euler
+
+[ODE_100_random_connected]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+exp_name=2_digit_mnist_ODE_100_random_connected
+device=cuda
+interactive=False
+model=ODE_conv
+segments=3
+img_side=36
+num_global_control=0
+num_cn=45
+sw=False
+p_rewire=0.5
+batch_size=80
+eval_interval=1
+train_epochs=30
+show_every=100
+update_rate=10
+rf_type=arange
+depth=1
+start_filts=64
+split=16
+out_channels=64
+kernel_size=3,3
+time_steps=1
+record_step=5
+max_time=100
+transform=linear
+phase_initialization=fixed
+intrinsic_frequencies=zero
+learning_rate=1e-4
+sparsity_weight=0
+time_weight=0
+classify=False
+recurrent_classifier=False
+graph_stats=False
+ode_train=True
+world_size=8
+solver=euler
+
+
+[ODE_100_explicit_adams]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+exp_name=2_digit_mnist_ODE_100_explicit_adams
+device=cuda
+interactive=False
+model=ODE_conv
+segments=3
+img_side=36
+num_global_control=0
+num_cn=24
+sw=False
+p_rewire=0
+batch_size=80
+eval_interval=1
+train_epochs=30
+show_every=100
+update_rate=10
+rf_type=arange
+depth=3
+start_filts=64
+split=16
+out_channels=64
+kernel_size=3,3
+time_steps=1
+record_step=5
+max_time=100
+transform=linear
+phase_initialization=fixed
+intrinsic_frequencies=zero
+learning_rate=1e-4
+sparsity_weight=0
+time_weight=0
+classify=False
+recurrent_classifier=False
+graph_stats=False
+ode_train=True
+world_size=8
+solver=explicit_adams
+
+[ODE_100_old_MNIST2]
 data_name=1000-types-mnist/multi-mnist10-0.1-sd0.8
-exp_name=2_digit_mnist_ODE_100_debug_2
+exp_name=2_digit_mnist_ODE_100_old
 device=cuda
 interactive=False
 model=ODE_conv
@@ -330,9 +486,9 @@ num_global_control=0
 num_cn=24
 sw=False
 p_rewire=0
-batch_size=30
+batch_size=80
 eval_interval=1
-train_epochs=300
+train_epochs=30 
 show_every=100
 update_rate=10
 rf_type=arange
@@ -354,4 +510,356 @@ classify=False
 recurrent_classifier=False
 graph_stats=False
 ode_train=True
-world_size=3
+world_size=8
+solver=euler
+
+[ODE_100_exp_1_conv]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+exp_name=2_digit_mnist_ODE_100_exp_1_conv_true
+device=cuda
+interactive=False
+model=ODE_conv
+segments=3
+img_side=36
+num_global_control=0
+num_cn=24
+sw=False
+p_rewire=0
+batch_size=80
+eval_interval=1
+train_epochs=30
+show_every=100
+update_rate=10
+rf_type=arange
+depth=1
+start_filts=128
+split=32
+out_channels=128
+kernel_size=3,3
+time_steps=1
+record_step=5
+max_time=100
+transform=exp
+phase_initialization=fixed
+intrinsic_frequencies=zero
+learning_rate=1e-4
+sparsity_weight=0
+time_weight=0
+classify=False
+recurrent_classifier=False
+graph_stats=False
+ode_train=True
+world_size=8
+solver=euler
+
+[ODE_100_exp_3_conv]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+exp_name=2_digit_mnist_ODE_exp_3_conv_long
+device=cuda
+interactive=False
+model=ODE_conv
+segments=3
+img_side=36
+num_global_control=0
+num_cn=24
+sw=False
+p_rewire=0
+batch_size=80
+eval_interval=1
+train_epochs=200
+show_every=100
+update_rate=10
+rf_type=arange
+depth=3
+start_filts=64
+split=32
+out_channels=64
+kernel_size=3,3
+time_steps=1
+record_step=5
+max_time=100
+transform=exp
+phase_initialization=fixed
+intrinsic_frequencies=zero
+learning_rate=1e-4
+sparsity_weight=0
+time_weight=0
+classify=False
+recurrent_classifier=False
+graph_stats=False
+ode_train=True
+world_size=8
+solver=euler
+
+[ODE_100_exp_connec_45]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+exp_name=2_digit_mnist_ODE_exp_connec_45
+device=cuda
+interactive=False
+model=ODE_conv
+segments=3
+img_side=36
+num_global_control=0
+num_cn=45
+sw=False
+p_rewire=0
+batch_size=80
+eval_interval=1
+train_epochs=100
+show_every=100
+update_rate=10
+rf_type=arange
+depth=3
+start_filts=64
+split=16
+out_channels=64
+kernel_size=3,3
+time_steps=1
+record_step=5
+max_time=100
+transform=exp
+phase_initialization=fixed
+intrinsic_frequencies=zero
+learning_rate=1e-4
+sparsity_weight=0
+time_weight=0
+classify=False
+recurrent_classifier=False
+graph_stats=False
+ode_train=True
+world_size=8
+solver=euler
+
+[ODE_100_exp_3_kernel_6]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+exp_name=2_digit_mnist_ODE_exp_3_kernel_6
+device=cuda
+interactive=False
+model=ODE_conv
+segments=3
+img_side=36
+num_global_control=0
+num_cn=24
+sw=False
+p_rewire=0
+batch_size=80
+eval_interval=1
+train_epochs=100
+show_every=100
+update_rate=10
+rf_type=arange
+depth=3
+start_filts=64
+split=16
+out_channels=64
+kernel_size=5,5
+time_steps=1
+record_step=5
+max_time=100
+transform=exp
+phase_initialization=fixed
+intrinsic_frequencies=zero
+learning_rate=1e-4
+sparsity_weight=0
+time_weight=0
+classify=False
+recurrent_classifier=False
+graph_stats=False
+ode_train=True
+world_size=8
+solver=euler
+
+[ODE_100_exp_channels]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+exp_name=2_digit_mnist_ODE_exp_channels
+device=cuda
+interactive=False
+model=ODE_conv
+segments=3
+img_side=36
+num_global_control=0
+num_cn=24
+sw=False
+p_rewire=0
+batch_size=80
+eval_interval=1
+train_epochs=100
+show_every=100
+update_rate=10
+rf_type=arange
+depth=3
+start_filts=64
+split=32
+out_channels=128
+kernel_size=3,3
+time_steps=1
+record_step=5
+max_time=100
+transform=exp
+phase_initialization=fixed
+intrinsic_frequencies=zero
+learning_rate=1e-4
+sparsity_weight=0
+time_weight=0
+classify=False
+recurrent_classifier=False
+graph_stats=False
+ode_train=True
+world_size=8
+solver=euler
+
+[ODE_100_exp_record_steps10]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+exp_name=2_digit_mnist_ODE_exp_record_steps
+device=cuda
+interactive=False
+model=ODE_conv
+segments=3
+img_side=36
+num_global_control=0
+num_cn=24
+sw=False
+p_rewire=0
+batch_size=80
+eval_interval=1
+train_epochs=200
+show_every=100
+update_rate=10
+rf_type=arange
+depth=3
+start_filts=64
+split=16
+out_channels=64
+kernel_size=3,3
+time_steps=1
+record_step=10
+max_time=100
+transform=exp
+phase_initialization=fixed
+intrinsic_frequencies=zero
+learning_rate=1e-4
+sparsity_weight=0
+time_weight=0
+classify=False
+recurrent_classifier=False
+graph_stats=False
+ode_train=True
+world_size=8
+solver=euler
+
+[ODE_100_exp_fulltime]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+exp_name=2_digit_mnist_ODE_exp_fulltime
+device=cuda
+interactive=False
+model=ODE_conv
+segments=3
+img_side=36
+num_global_control=0
+num_cn=24
+sw=False
+p_rewire=0
+batch_size=80
+eval_interval=1
+train_epochs=200
+show_every=100
+update_rate=10
+rf_type=arange
+depth=3
+start_filts=64
+split=16
+out_channels=64
+kernel_size=3,3
+time_steps=1
+record_step=20
+max_time=100
+transform=exp
+phase_initialization=fixed
+intrinsic_frequencies=zero
+learning_rate=1e-4
+sparsity_weight=0
+time_weight=0
+classify=False
+recurrent_classifier=False
+graph_stats=False
+ode_train=True
+world_size=8
+solver=euler
+
+[ODE_100_exp_intrinsic]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+exp_name=2_digit_mnist_ODE_exp_intrinsic
+device=cuda
+interactive=False
+model=ODE_conv
+segments=3
+img_side=36
+num_global_control=0
+num_cn=24
+sw=False
+p_rewire=0
+batch_size=80
+eval_interval=1
+train_epochs=200
+show_every=100
+update_rate=10
+rf_type=arange
+depth=3
+start_filts=64
+split=16
+out_channels=64
+kernel_size=3,3
+time_steps=1
+record_step=5
+max_time=100
+transform=exp
+phase_initialization=fixed
+intrinsic_frequencies=conv
+learning_rate=1e-4
+sparsity_weight=0
+time_weight=0
+classify=False
+recurrent_classifier=False
+graph_stats=False
+ode_train=True
+world_size=8
+solver=euler
+
+[ODE_100_exp_random_init]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+exp_name=2_digit_mnist_ODE_exp_random_init
+device=cuda
+interactive=False
+model=ODE_conv
+segments=3
+img_side=36
+num_global_control=0
+num_cn=24
+sw=False
+p_rewire=0
+batch_size=80
+eval_interval=1
+train_epochs=200
+show_every=100
+update_rate=10
+rf_type=arange
+depth=3
+start_filts=64
+split=16
+out_channels=64
+kernel_size=3,3
+time_steps=1
+record_step=5
+max_time=100
+transform=exp
+phase_initialization=random
+intrinsic_frequencies=fixed
+learning_rate=1e-4
+sparsity_weight=0
+time_weight=0
+classify=False
+recurrent_classifier=False
+graph_stats=False
+ode_train=True
+world_size=8
+solver=euler
