mean_loss/dropout/intrinsic_freq

--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -1,16 +1,16 @@
 [DEFAULT]
-data_name=1000-types-mnist/multi-mnist10-0.1-sd0.8
-exp_name=debug_defaukt
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+exp_name=exp_loss_3_debug
 device=cuda
 interactive=False
-model=ODE_conv
+model_name=ODE_conv
 segments=3
 img_side=36
 num_global_control=0
 num_cn=24
 sw=False
 p_rewire=0
-batch_size=10
+batch_size=30
 eval_interval=5
 train_epochs=100
 show_every=100
@@ -20,7 +20,7 @@ depth=3
 start_filts=64
 split=16
 out_channels=64
-kernel_size=3,3
+kernel_size=5
 time_steps=1
 record_step=5
 anneal=0.2
@@ -29,13 +29,14 @@ walk_step=.1
 intrinsic_frequencies=zero
 learning_rate=1e-4
 transform=linear
-sparsity_weight=0
+sparsity_weight=0.0001
 time_weight=0
 classify=False
 recurrent_classifier=False
 graph_stats=False
 ode_train=True
-world_size=1
+world_size=3
+dropout_p=0.5
 
 
 [Multi_MNIST36]
