mean_loss/dropout/intrinsic_freq

--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -853,8 +853,8 @@ time_steps=1
 record_step=5
 max_time=100
 transform=exp
-phase_initialization=random
-intrinsic_frequencies=fixed
+phase_initialization=fixed
+intrinsic_frequencies=zero
 learning_rate=1e-4
 sparsity_weight=0
 time_weight=0
@@ -864,3 +864,166 @@ graph_stats=False
 ode_train=True
 world_size=8
 solver=euler
+
+[Big_MNIST_ODE_100_exploss]
+data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
+exp_name=Big_Multi_MNIST/ODE_exploss
+device=cuda
+interactive=False
+model=ODE_conv
+segments=3
+img_side=36
+num_global_control=0
+num_cn=45
+sw=False
+p_rewire=0
+batch_size=100
+eval_interval=1
+train_epochs=300
+show_every=100
+update_rate=10
+rf_type=arange
+depth=3
+start_filts=64
+split=16
+out_channels=64
+kernel_size=3,3
+time_steps=1
+record_step=5
+max_time=100
+transform=exp
+phase_initialization=fixed
+intrinsic_frequencies=zero
+learning_rate=1e-4
+sparsity_weight=0
+time_weight=0
+classify=False
+recurrent_classifier=False
+graph_stats=False
+ode_train=True
+world_size=8
+solver=euler
+dropout_p=0.4
+
+[Big_MNIST_ODE_100_meanloss]
+data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
+exp_name=Big_Multi_MNIST/ODE_meanloss
+device=cuda
+interactive=False
+model=ODE_conv
+segments=3
+img_side=36
+num_global_control=0
+num_cn=45
+sw=False
+p_rewire=0
+batch_size=100
+eval_interval=1
+train_epochs=300
+show_every=100
+update_rate=10
+rf_type=arange
+depth=3
+start_filts=64
+split=16
+out_channels=64
+kernel_size=3,3
+time_steps=1
+record_step=5
+max_time=100
+transform=exp
+phase_initialization=fixed
+intrinsic_frequencies=zero
+learning_rate=1e-4
+sparsity_weight=0
+time_weight=0
+classify=False
+recurrent_classifier=False
+graph_stats=False
+ode_train=True
+world_size=8
+solver=euler
+dropout_p=0.4
+loss_version=3
+
+[Big_MNIST_Baseline]
+data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
+exp_name=Big_Multi_MNIST/Baseline_noKura
+device=cuda
+interactive=False
+model=base_noKura_conv
+segments=3
+img_side=36
+num_global_control=0
+num_cn=45
+sw=False
+p_rewire=0
+batch_size=100
+eval_interval=1
+train_epochs=300
+show_every=100
+update_rate=10
+rf_type=arange
+depth=3
+start_filts=64
+split=16
+out_channels=64
+kernel_size=3,3
+time_steps=1
+record_step=5
+max_time=100
+transform=exp
+phase_initialization=fixed
+intrinsic_frequencies=zero
+learning_rate=1e-4
+sparsity_weight=0
+time_weight=0
+classify=False
+recurrent_classifier=False
+graph_stats=False
+ode_train=True
+world_size=8
+solver=euler
+dropout_p=0.4
+loss_version=2
+
+[Big_MNIST_Intrinsic_on]
+data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
+exp_name=Big_Multi_MNIST/ODE_intrinsic_freq
+device=cuda
+interactive=False
+model=ODE_conv
+segments=3
+img_side=36
+num_global_control=0
+num_cn=45
+sw=False
+p_rewire=0
+batch_size=100
+eval_interval=1
+train_epochs=300
+show_every=100
+update_rate=10
+rf_type=arange
+depth=3
+start_filts=64
+split=16
+out_channels=64
+kernel_size=3,3
+time_steps=1
+record_step=5
+max_time=100
+transform=exp
+phase_initialization=fixed
+intrinsic_frequencies=conv
+learning_rate=1e-4
+sparsity_weight=0
+time_weight=0
+classify=False
+recurrent_classifier=False
+graph_stats=False
+ode_train=True
+world_size=3
+solver=euler
+dropout_p=0.4
+loss_version=2
