--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -33,7 +33,7 @@ learning_rate=1e-4
 transform=exp
 sparsity_weight=.0001
 time_weight=0
-clustering_algorithm=ms
+clustering_algorithm=km
 classify=False
 recurrent_classifier=False
 graph_stats=False
@@ -880,6 +880,8 @@ eval_interval=10
 train_epochs=1000
 time_weight=0
 verbosity=1
+show_every=-1
+pretrained=True
 
 [E23]
 data_name=New_Multi_MNIST/class_grouping/overlap_0.25
@@ -1300,6 +1302,8 @@ eval_interval=10
 train_epochs=1000
 time_weight=0
 verbosity=1
+show_every=-1
+pretrained=True
 
 [E38]
 data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
@@ -1328,3 +1332,5 @@ eval_interval=10
 train_epochs=1000
 time_weight=0
 verbosity=1
+show_every=1
+pretrained=True
