--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -910,7 +910,7 @@ data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
 exp_name=Big_Multi_MNIST/ODE_meanloss
 device=cuda
 interactive=False
-model=ODE_conv
+model_name=ODE_conv
 segments=3
 img_side=36
 num_global_control=0
@@ -951,7 +951,7 @@ data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
 exp_name=Big_Multi_MNIST/Baseline_noKura
 device=cuda
 interactive=False
-model=base_noKura_conv
+model_name=base_noKura_conv
 segments=3
 img_side=36
 num_global_control=0
@@ -992,7 +992,7 @@ data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
 exp_name=Big_Multi_MNIST/ODE_intrinsic_freq
 device=cuda
 interactive=False
-model=ODE_conv
+model_name=ODE_conv
 segments=3
 img_side=36
 num_global_control=0
@@ -1023,7 +1023,168 @@ classify=False
 recurrent_classifier=False
 graph_stats=False
 ode_train=True
+world_size=8
+solver=euler
+dropout_p=0.4
+loss_version=2
+
+[Big_MNIST_Kura_euler]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+exp_name=Big_Multi_MNIST2/Kura_euler_2
+device=cuda
+interactive=False
+model_name=base_conv
+segments=3
+img_side=36
+num_global_control=0
+num_cn=45
+sw=False
+p_rewire=0
+batch_size=30
+eval_interval=1
+train_epochs=300
+show_every=100
+update_rate=5
+rf_type=arange
+depth=3
+start_filts=64
+split=16
+out_channels=64
+kernel_size=3,3
+time_steps=20
+record_step=5
+max_time=100
+transform=exp
+phase_initialization=fixed
+intrinsic_frequencies=zero
+learning_rate=1e-4
+sparsity_weight=0
+time_weight=0
+classify=False
+recurrent_classifier=False
+graph_stats=False
+ode_train=False
 world_size=3
 solver=euler
 dropout_p=0.4
 loss_version=2
+
+[Sep_MNIST_ODE_exploss_t0]
+data_name=Separated_New_Multi_Mnist/class_grouping/overlap_0.25
+exp_name=Separated_Multi_MNIST/ODE_exploss_reg0
+device=cuda
+interactive=False
+model_name=ODE_conv
+segments=3
+img_side=36
+num_global_control=0
+num_cn=45
+sw=False
+p_rewire=0
+batch_size=15
+eval_interval=1
+train_epochs=300
+show_every=100
+update_rate=10
+rf_type=arange
+depth=3
+start_filts=64
+split=16
+out_channels=64
+kernel_size=3,3
+time_steps=1
+record_step=5
+max_time=100
+transform=exp
+phase_initialization=fixed
+intrinsic_frequencies=zero
+learning_rate=1e-4
+sparsity_weight=0
+time_weight=0
+classify=False
+recurrent_classifier=False
+graph_stats=False
+ode_train=True
+world_size=1
+solver=euler
+dropout_p=0.4
+
+[Sep_MNIST_ODE_exploss_t1]
+data_name=Separated_New_Multi_Mnist/class_grouping/overlap_0.25
+exp_name=Separated_Multi_MNIST/ODE_exploss_reg1
+device=cuda
+interactive=False
+model_name=ODE_conv
+segments=3
+img_side=36
+num_global_control=0
+num_cn=45
+sw=False
+p_rewire=0
+batch_size=15
+eval_interval=1
+train_epochs=300
+show_every=100
+update_rate=10
+rf_type=arange
+depth=3
+start_filts=64
+split=16
+out_channels=64
+kernel_size=3,3
+time_steps=1
+record_step=5
+max_time=100
+transform=exp
+phase_initialization=fixed
+intrinsic_frequencies=zero
+learning_rate=1e-4
+sparsity_weight=1
+time_weight=0
+classify=False
+recurrent_classifier=False
+graph_stats=False
+ode_train=True
+world_size=1
+solver=euler
+dropout_p=0.4
+
+[Sep_MNIST_ODE_exploss_t10]
+data_name=Separated_New_Multi_Mnist/class_grouping/overlap_0.25
+exp_name=Separated_Multi_MNIST/ODE_exploss_reg10
+device=cuda
+interactive=False
+model_name=ODE_conv
+segments=3
+img_side=36
+num_global_control=0
+num_cn=45
+sw=False
+p_rewire=0
+batch_size=15
+eval_interval=1
+train_epochs=300
+show_every=100
+update_rate=10
+rf_type=arange
+depth=3
+start_filts=64
+split=16
+out_channels=64
+kernel_size=3,3
+time_steps=1
+record_step=5
+max_time=100
+transform=exp
+phase_initialization=fixed
+intrinsic_frequencies=zero
+learning_rate=1e-4
+sparsity_weight=10
+time_weight=0
+classify=False
+recurrent_classifier=False
+graph_stats=False
+ode_train=True
+world_size=1
+solver=euler
+dropout_p=0.4
