--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -857,7 +857,7 @@ verbosity=1
 [E22]
 data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
 segments=3
-exp_name=E22
+exp_name=E22_corrected
 model_name=base_noKura_conv
 img_side = 36
 time_steps=1
@@ -870,7 +870,7 @@ p_rewire=0
 num_cn=24
 num_global_control=0
 depth=3
-start_filts=64
+start_filts=96
 split=1
 kernel_size=5
 activation=tanh
@@ -881,7 +881,7 @@ train_epochs=1000
 time_weight=0
 verbosity=1
 show_every=-1
-pretrained=True
+pretrained=False
 
 [E23]
 data_name=New_Multi_MNIST/class_grouping/overlap_0.25
@@ -1278,7 +1278,7 @@ verbosity=1
 [E37]
 data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
 segments=3
-exp_name=E37
+exp_name=E37_split
 model_name=base_conv
 img_side = 36
 time_steps=15
@@ -1303,7 +1303,7 @@ train_epochs=1000
 time_weight=0
 verbosity=1
 show_every=-1
-pretrained=True
+pretrained=False
 
 [E38]
 data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
@@ -1333,4 +1333,126 @@ train_epochs=1000
 time_weight=0
 verbosity=1
 show_every=1
-pretrained=True
+pretrained=False
+
+[E39]
+data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E39
+model_name=base_conv
+img_side = 36
+time_steps=15
+record_steps=15
+anneal=0.0
+update_rate=6
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=4
+depth=3
+start_filts=64
+split=4
+kernel_size=5
+activation=tanh
+dropout_p=.5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
+show_every=-1
+pretrained=False
+
+[E40]
+data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E40
+model_name=neighbor_conv
+img_side = 36
+time_steps=15
+record_steps=15
+anneal=0.0
+update_rate=6
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=64
+split=4
+kernel_size=5
+activation=tanh
+dropout_p=.5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
+show_every=-1
+pretrained=False
+
+[E41]
+data_name=Separated_New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E41
+model_name=base_conv
+img_side = 36
+time_steps=15
+record_steps=15
+batch_size=32
+anneal=0.0
+update_rate=6
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=64
+split=4
+kernel_size=5
+activation=tanh
+dropout_p=.5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
+show_every=-1
+pretrained=False
+
+[E42]
+data_name=Separated_New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E42
+model_name=base_noKura_conv
+img_side = 36
+time_steps=15
+record_steps=15
+batch_size=32
+anneal=0.0
+update_rate=6
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=96
+split=1
+kernel_size=5
+activation=tanh
+dropout_p=.5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
+show_every=-1
+pretrained=False
