--- a/kuramoto_analysis/experiments.cfg
+++ b/kuramoto_analysis/experiments.cfg
@@ -1,6 +1,17 @@
+[Kura]
+exp_name=justkura4
+model = just_kura
+img_side = 2
+num_cn = 4
+time_steps = 150
+record_steps = 10
+batch_size =1
+train_epochs = 1000
+show_every = 10
+
 [DEFAULT]
 data_name=composite_textures_small
-exp_name=kura_texture
+exp_name=trial
 device=cuda
 pretrained=False
 interactive=False
