changed loss,added visualizations

--- a/kuramoto_analysis/experiments.cfg
+++ b/kuramoto_analysis/experiments.cfg
@@ -1,13 +1,15 @@
 [Kura]
-exp_name=justkura4
+exp_name=trial
 model = just_kura
-img_side = 2
-num_cn = 4
-time_steps = 150
+img_side = 3
+num_cn = 9
+time_steps = 10
 record_steps = 10
 batch_size =1
-train_epochs = 1000
+train_epochs = 200
 show_every = 10
+#learning_rate = 0.01
+#phase_initialization=random
 
 [DEFAULT]
 data_name=composite_textures_small
