added plotting for phase thorugh kuramoto, fixed visualization

--- a/kuramoto_analysis/experiments.cfg
+++ b/kuramoto_analysis/experiments.cfg
@@ -1,12 +1,12 @@
 [Kura]
-exp_name=trial
+exp_name=trialimage
 model = just_kura
 img_side = 3
 num_cn = 9
 time_steps = 10
-record_steps = 10
+record_steps = 1
 batch_size =1
-train_epochs = 200
+train_epochs = 500
 show_every = 10
 #learning_rate = 0.01
 #phase_initialization=random
