debugged coupling viz; experiments; omega_min/omega_max

--- a/kuramoto_analysis/experiments.cfg
+++ b/kuramoto_analysis/experiments.cfg
@@ -1,5 +1,189 @@
 [Kura]
-exp_name=trialimage
+exp_name=Osc9Ts10Rt1Te500
+#exp_name = trial
+model = just_kura
+img_side = 3
+num_cn = 9
+time_steps = 10
+record_steps = 1
+batch_size =1
+train_epochs = 500
+show_every = 10
+omega_min = 0 
+omega_max = 10 
+#learning_rate = 0.01
+#phase_initialization=random
+
+###diff time_steps experiments:
+[TS10]
+exp_name=Osc9Ts10Rt1Te500
+model = just_kura
+img_side = 3
+num_cn = 9
+time_steps = 10
+record_steps = 1
+batch_size =1
+train_epochs = 500
+show_every = 10
+
+[TS50]
+exp_name=Osc9Ts50Rt1Te500
+model = just_kura
+img_side = 3
+num_cn = 9
+time_steps = 50
+record_steps = 1
+batch_size =1
+train_epochs = 500
+show_every = 10
+
+[TS100]
+exp_name=Osc9Ts100Rt1Te500
+model = just_kura
+img_side = 3
+num_cn = 9
+time_steps = 100
+record_steps = 1
+batch_size =1
+train_epochs = 500
+show_every = 10
+
+[TS150]
+exp_name=Osc9Ts150Rt1Te500
+model = just_kura
+img_side = 3
+num_cn = 9
+time_steps = 150
+record_steps = 1
+batch_size =1
+train_epochs = 500
+show_every = 10
+
+[TS200]
+exp_name=Osc9Ts200Rt1Te500
+model = just_kura
+img_side = 3
+num_cn = 9
+time_steps = 200
+record_steps = 1
+batch_size =1
+train_epochs = 500
+show_every = 10
+
+
+###diff num osc experiments:
+[OSC9]
+#experiment already ran
+exp_name=Osc9Ts10Rt1Te500
+model = just_kura
+img_side = 3
+num_cn = 9
+time_steps = 10
+record_steps = 1
+batch_size =1
+train_epochs = 500
+show_every = 10
+
+[OSC400]
+exp_name = Osc400Ts10Rt1Te500
+model = just_kura
+img_side = 20
+num_cn = 400
+time_steps = 10
+record_steps = 1
+batch_size =1
+train_epochs = 500
+show_every = 10
+
+[OSC10000]
+exp_name = Osc10000Ts10Rt1Te500
+model = just_kura
+img_side = 100
+num_cn = 10000
+time_steps = 10
+record_steps = 1
+batch_size =1
+train_epochs = 500
+show_every = 10
+
+
+
+###diff omega experiments:
+[Omega0_10]
+#experiment already run
+exp_name=Osc9Ts10Rt1Te500
+model = just_kura
+img_side = 3
+num_cn = 9
+time_steps = 10
+record_steps = 1
+batch_size =1
+train_epochs = 500
+show_every = 10
+omega_min = 0 
+omega_max = 10 
+
+[Omega10_20]
+exp_name=Osc9Ts10Rt1Te500Omega1020
+model = just_kura
+img_side = 3
+num_cn = 9
+time_steps = 10
+record_steps = 1
+batch_size =1
+train_epochs = 500
+show_every = 10
+omega_min = 10
+omega_max = 20 
+
+
+[Omega20_30]
+exp_name=Osc9Ts10Rt1Te500Omega2030
+model = just_kura
+img_side = 3
+num_cn = 9
+time_steps = 10
+record_steps = 1
+batch_size =1
+train_epochs = 500
+show_every = 10
+omega_min = 20
+omega_max = 30 
+
+[Omega0_30]
+exp_name=Osc9Ts10Rt1Te500Omega0030
+model = just_kura
+img_side = 3
+num_cn = 9
+time_steps = 10
+record_steps = 1
+batch_size =1
+train_epochs = 500
+show_every = 10
+omega_min = 0
+omega_max = 30 
+
+
+
+
+
+###phase initialization experiments: 
+[PhaseRandom]
+exp_name=Osc9Ts10Rt1Te500phaseRandom
+model = just_kura
+img_side = 3
+num_cn = 9
+time_steps = 10
+record_steps = 1
+batch_size =1
+train_epochs = 500
+show_every = 10
+#learning_rate = 0.01
+phase_initialization=random
+
+[PhaseFixed]
+#experiment already ran
+exp_name=Osc9Ts10Rt1Te500
 model = just_kura
 img_side = 3
 num_cn = 9
@@ -10,6 +194,7 @@ train_epochs = 500
 show_every = 10
 #learning_rate = 0.01
 #phase_initialization=random
+
 
 [DEFAULT]
 data_name=composite_textures_small
