--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -1398,7 +1398,7 @@ pretrained=False
 [E41]
 data_name=Separated_New_Multi_MNIST/class_grouping/overlap_0.25
 segments=3
-exp_name=E41
+exp_name=E41_cohn
 model_name=base_conv
 img_side = 36
 time_steps=15
@@ -1429,7 +1429,7 @@ pretrained=False
 [E42]
 data_name=Separated_New_Multi_MNIST/class_grouping/overlap_0.25
 segments=3
-exp_name=E42
+exp_name=E42_cohn
 model_name=base_noKura_conv
 img_side = 36
 time_steps=15
@@ -1444,6 +1444,130 @@ p_rewire=0
 num_cn=24
 num_global_control=0
 depth=3
+start_filts=96
+split=1
+kernel_size=5
+activation=tanh
+dropout_p=.5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
+show_every=-1
+pretrained=False
+
+[E43]
+data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E43
+model_name=base_conv
+img_side = 36
+time_steps=15
+record_steps=15
+batch_size=32
+anneal=0.0
+update_rate=6
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=64
+split=4
+kernel_size=5
+activation=tanh
+dropout_p=.5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
+show_every=-1
+pretrained=False
+
+[E44]
+data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E44
+model_name=base_noKura_conv
+img_side = 36
+time_steps=15
+record_steps=15
+batch_size=32
+anneal=0.0
+update_rate=6
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=96
+split=1
+kernel_size=5
+activation=tanh
+dropout_p=.5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
+show_every=-1
+pretrained=False
+
+[E45]
+data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E45
+model_name=base_conv
+img_side = 36
+time_steps=15
+record_steps=15
+batch_size=32
+anneal=0.0
+update_rate=6
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=1
+start_filts=64
+split=4
+kernel_size=5
+activation=tanh
+dropout_p=.5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
+show_every=-1
+pretrained=False
+
+[E46]
+data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E46
+model_name=base_noKura_conv
+img_side = 36
+time_steps=15
+record_steps=15
+batch_size=32
+anneal=0.0
+update_rate=6
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=1
 start_filts=96
 split=1
 kernel_size=5
