Fixed mask overlaps (E43-E46), plus loss arg

--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -1398,7 +1398,7 @@ pretrained=False
 [E41]
 data_name=Separated_New_Multi_MNIST/class_grouping/overlap_0.25
 segments=3
-exp_name=E41_cohn
+exp_name=E41
 model_name=base_conv
 img_side = 36
 time_steps=15
@@ -1423,13 +1423,13 @@ eval_interval=10
 train_epochs=1000
 time_weight=0
 verbosity=1
-show_every=-1
-pretrained=False
+show_every=1
+pretrained=True
 
 [E42]
 data_name=Separated_New_Multi_MNIST/class_grouping/overlap_0.25
 segments=3
-exp_name=E42_cohn
+exp_name=E42
 model_name=base_noKura_conv
 img_side = 36
 time_steps=15
@@ -1458,7 +1458,7 @@ show_every=-1
 pretrained=False
 
 [E43]
-data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
+data_name=nonoverlapping_masks_Multi_MNIST/class_grouping/overlap_0.25
 segments=3
 exp_name=E43
 model_name=base_conv
@@ -1487,9 +1487,10 @@ time_weight=0
 verbosity=1
 show_every=-1
 pretrained=False
+loss='cos'
 
 [E44]
-data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
+data_name=nonoverlapping_masks_Multi_MNIST/class_grouping/overlap_0.25
 segments=3
 exp_name=E44
 model_name=base_noKura_conv
@@ -1518,9 +1519,10 @@ time_weight=0
 verbosity=1
 show_every=-1
 pretrained=False
+loss='cos'
 
 [E45]
-data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
+data_name=nonoverlapping_masks_Multi_MNIST/class_grouping/overlap_0.25
 segments=3
 exp_name=E45
 model_name=base_conv
@@ -1536,7 +1538,7 @@ sw=False
 p_rewire=0
 num_cn=24
 num_global_control=0
-depth=1
+depth=3
 start_filts=64
 split=4
 kernel_size=5
@@ -1549,9 +1551,10 @@ time_weight=0
 verbosity=1
 show_every=-1
 pretrained=False
+loss='cohn'
 
 [E46]
-data_name=Big_New_Multi_MNIST/class_grouping/overlap_0.25
+data_name=nonoverlapping_masks_Multi_MNIST/class_grouping/overlap_0.25
 segments=3
 exp_name=E46
 model_name=base_noKura_conv
@@ -1567,7 +1570,7 @@ sw=False
 p_rewire=0
 num_cn=24
 num_global_control=0
-depth=1
+depth=3
 start_filts=96
 split=1
 kernel_size=5
@@ -1580,3 +1583,4 @@ time_weight=0
 verbosity=1
 show_every=-1
 pretrained=False
+loss='cohn'
