Added network dynamics nb

--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -1549,8 +1549,8 @@ eval_interval=10
 train_epochs=1000
 time_weight=0
 verbosity=1
-show_every=-1
-pretrained=False
+show_every=1
+pretrained=True
 loss='cohn'
 
 [E46]
